remove letter spacing from button, fix helpers

--- a/sass/components/button/button.sass
+++ b/sass/components/button/button.sass
@@ -19,7 +19,7 @@
     padding: $gap-regular
     transition: background-color $transition $easing, border-color $transition $easing, color $transition $easing, background $transition-click
     background-position: center
-    letter-spacing: .75px
+    letter-spacing: .25px
 
     + .button
       margin-right: $gap-regular
