--- a/sass/helpers/helper.sass
+++ b/sass/helpers/helper.sass
@@ -13,6 +13,8 @@
 
     &--is-no-list-style
       list-style: none
+      margin: $zero
+      padding: $zero
 
     &--is-link
       color: $color-secondary
